--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
 spring.application.name=rest_api
 
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-api.security.jwt.secret=${JWT_SECRET}
+spring.profiles.active=dev
