Funcionalidade de cotação de frete

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# This file is an example of environment variables for the application.
+# It is recommended to create a .env file based on this example.
 DATASOURCE_URL=
 
 JWT_SECRET=
+
+SUPER_FRETE_TOKEN=
