--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,10 @@
+api.security.jwt.secret=${JWT_SECRET}
+api.super-frete.token=${SUPER_FRETE_TOKEN}
+
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-api.security.jwt.secret=${JWT_SECRET}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
