--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
     		<version>5.2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.mercadopago</groupId>
+			<artifactId>sdk-java</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
