Integração básica com mercado pago(Sem integração com o banco)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 api.security.jwt.secret=${JWT_SECRET}
 api.super-frete.token=${SUPER_FRETE_TOKEN}
+api.mercado-pago.token=${MERCADO_PAGO_TOKEN}
+api.mercado-pago.notification-url=${MERCADO_PAGO_NOTIFICATION_URL}
 
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
