--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,10 +3,16 @@ api.super-frete.token=${SUPER_FRETE_TOKEN}
 api.mercado-pago.token=${MERCADO_PAGO_TOKEN}
 api.mercado-pago.notification-url=${MERCADO_PAGO_NOTIFICATION_URL}
 
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db/migration
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
